chore(obsidian): sync docs vault plugins
Made-with: Cursor

--- a/content/.obsidian/plugins/obsidian-icon-folder/styles.css
+++ b/content/.obsidian/plugins/obsidian-icon-folder/styles.css
@@ -28,7 +28,7 @@
   align-items: center;
 }
 
-.iconize-setting input[type='color'] {
+.iconize-setting input[type="color"] {
   margin: 0 6px;
 }
 
